--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ layout: default
 			</div>
 			<div data-src="images/slide1.jpg">
 				<div class="camera_caption fadeIn">
-				  <h2>Optical Flow based Facial Expression Suppression in Videos</h2>
+				  <h2>Facial Expression Suppression in Videos</h2>
 				  We are proposing a novel method for suppressing facial expressions in video sequences using strain analysis of facial tissue. 
 				<p><a href="suppression.html" class="button">More Info</a></p>
 				</div>
