--- a/resume.html
+++ b/resume.html
@@ -9,7 +9,7 @@ layout: default
 			<div>
 				<div>
 					<h2 class="h-pad1">Curriculum Vitae</h2>
-					<object data="pdf/JesseBrizziCV.pdf" type="application/pdf" width="1000px" height="800px">
+					<object data="pdf/JesseBrizziResume.pdf" type="application/pdf" width="1000px" height="800px">
 						Trouble viewing the PDF? Click here instead: https://dl.dropboxusercontent.com/u/12490198/Website/JesseBrizziCV.pdf
 					</object>
 				</div>
