--- a/resume.html
+++ b/resume.html
@@ -8,9 +8,9 @@ layout: default
 		<div class="container_12">
 			<div>
 				<div>
-					<h2 class="h-pad1">Curriculum Vitae</h2>
+					<h2 class="h-pad1">Resume</h2>
 					<object data="pdf/JesseBrizziResume.pdf" type="application/pdf" width="1000px" height="800px">
-						Trouble viewing the PDF? Click here instead: https://dl.dropboxusercontent.com/u/12490198/Website/JesseBrizziCV.pdf
+						Trouble viewing the PDF? Click here instead: https://github.com/jessebrizzi/jessebrizzi.github.io/blob/master/pdf/JesseBrizziResume.pdf
 					</object>
 				</div>
 			</div>
