removed gradient, fixed link

--- a/resume.html
+++ b/resume.html
@@ -10,7 +10,7 @@ layout: default
 				<div>
 					<h2 class="h-pad1">Resume</h2>
 					<object data="pdf/JesseBrizziResume.pdf" type="application/pdf" width="1000px" height="800px">
-						Trouble viewing the PDF? Click here instead: https://github.com/jessebrizzi/jessebrizzi.github.io/blob/master/pdf/JesseBrizziResume.pdf
+						Trouble viewing the PDF? Click here instead: <a href="https://docs.google.com/a/stonybrook.edu/uc?id=0B0vRL7F7C1YieFFjRnJLSk5JVmc">Resume</a>
 					</object>
 				</div>
 			</div>
