--- a/spotting.html
+++ b/spotting.html
@@ -15,10 +15,7 @@ layout: default
 						In this paper, we propose a novel solution for the problem of segmenting macro- and microexpressions frames (or retrieving the expression intervals) in video sequences, which is a prior step for many expression recognition algorithms. The proposed method exploits the non-rigid facial motion that occurs during facial expressions by capturing the optical strain corresponding to the elastic deformation of facial skin tissue. The method is capable of spotting both macro expressions which are typically associated with expressed emotions and rapid micro- expressions which are typically (but not always) associated with semi-suppressedmacro-expressions. We test our algorithm on three datasets, including a newly released hour-long video with two subjects recorded in a natural setting that includes spontaneous facial expressions. We also report results on a dataset that contains 75 feigned macro-expressions and 37 feigned micro-expressions. We achieve over a 75% true positive rate with a 1% false positive rate for macro-expressions, and nearly 80% true positive rate for spotting microexpressions with a .3% false positive rate. For the spontaneous expression dataset, we achieve an average TPR of 68% at roughly a 10% FPR.
 					</p>
 					<p>
-						Submitted to IMAVIS, currently in second review. 
-					</p>
-					<p>
-						Paper Link: https://www.dropbox.com/s/6el6k97u1vx6hi8/Automatic_Expression_Spotting_IMAVIS_Submission.pdf
+						<a href="http://www.sciencedirect.com/science/article/pii/S026288561400078X">Paper Link</a>
 					</p>
 				</div>
 			</div>
