--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@ layout: default
 								Age: 23</br>
 								Stony Brook, New York</br>
 								NSF Fellow, W. Burghardt Turner Fellow </br>
-								PhD Student @ Stony Brook University</br>
-								Working in the area of Computer Vision, Human Sensing, and Machine Learning.
+								Masters Student @ Stony Brook University</br>
+								Working in the area of Computer Vision and Machine Learning.
 							</div>
 						</div>
 					</div>
 					<div class="grid_4">
 						<h2>Recent News</h2>
-						<div class="testimonial-block"> I am a 2015 NSF Fellow! 
+						<div class="testimonial-block"> 1st place in the Kaggle Facial Keypoint Detection Challenge!
                                 </div>
 					</div>
 				</div>
