update for job search

--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@ layout: default
 								Stony Brook, New York</br>
 								NSF Fellow, W. Burghardt Turner Fellow </br>
 								Masters Student @ Stony Brook University</br>
-								Working in the area of Computer Vision and Machine Learning.
+								Working in the area of Computer Vision, Machine Learning,and Data Science.
 							</div>
 						</div>
 					</div>
 					<div class="grid_4">
 						<h2>Recent News</h2>
-						<div class="testimonial-block"> 1st place in the Kaggle Facial Keypoint Detection Challenge!
+						<div class="testimonial-block"> Graduating this spring. Looking for a Job!
                                 </div>
 					</div>
 				</div>
