--- a/index.html
+++ b/index.html
@@ -48,7 +48,44 @@
                 </a>
             </div>
         </div>
+        <footer>
+            <p id="last_updated" class="last-updated"></p>
+        </footer>
     </main>
+    <script>
+        function formatDate(date) {
+            const monthNames = [
+                "January", "February", "March",
+                "April", "May", "June", "July",
+                "August", "September", "October",
+                "November", "December"
+            ];
+            const day = date.getDate();
+            const monthIndex = date.getMonth();
+            const year = date.getFullYear();
+            return `${day} ${monthNames[monthIndex]} ${year}`;
+        }
+
+        async function fetchLastUpdate() {
+            try {
+                const response = await fetch('https://api.github.com/repos/jessebrizzi/jessebrizzi.github.io/commits/master');
+                if (!response.ok) {
+                    throw new Error('Network response was not ok');
+                }
+                const data = await response.json();
+                const date = new Date(data.commit.author.date);
+                const formattedDate = formatDate(date);
+                const shortSha = data.sha.substring(0, 7);
+                document.getElementById("last_updated").innerHTML =
+                    `Last Updated: ${formattedDate} <a href="${data.html_url}">${shortSha}</a>`;
+            } catch (error) {
+                console.error('Error fetching last update:', error);
+                document.getElementById("last_updated").innerHTML = "Last update information unavailable";
+            }
+        }
+
+        fetchLastUpdate();
+    </script>
 </body>
 
 </html>
