--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
     <main>
         <div class="container">
-            <img src="images/JesseLogo.png" alt="Jesse Brizzi Logo" class="logo">
+            <img src="images/JesseLogo.svg" alt="Jesse Brizzi Logo" class="logo">
             <h1>Jesse Brizzi</h1>
             <div class="role">Machine Learning Engineer && Software Engineer</div>
             <div class="specialties">Machine Learning • Computer Vision • Full Stack/Backend Engineering • Data Science
