--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 Machine Learning Software Engineer @
                 <a href="https://www.twosigma.com/" target="_blank" rel="noopener noreferrer">Two Sigma</a>
             </div>
-            <div class="email">{ mail } @ jessebrizzi.com</div>
+            <div class="email">{ hello } @ jes.bz</div>
             <div class="social-links">
                 <a href="https://www.linkedin.com/pub/jesse-brizzi/80/50a/779" target="_blank" rel="noopener noreferrer"
                     class="social-link-1">
