--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </div>
             <div class="email">{ hello } @ jes.bz</div>
             <div class="social-links">
-                <a href="https://www.linkedin.com/pub/jesse-brizzi/80/50a/779" target="_blank" rel="noopener noreferrer"
+                <a href="https://www.linkedin.com/in/jesbz" target="_blank" rel="noopener noreferrer"
                     class="social-link-1">
                     <img src="images/linkedin-icon.png" alt="LinkedIn">
                 </a>
