--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <a href="https://instagram.com/j3553b" target="_blank" rel="noopener noreferrer" class="social-link-2">
                     <img src="images/instagram-icon.png" alt="Instagram">
                 </a>
-                <a href="https://www.github.com/jessebrizzi" target="_blank" rel="noopener noreferrer"
+                <a href="https://www.github.com/jes-bz" target="_blank" rel="noopener noreferrer"
                     class="social-link-3">
                     <img src="images/github-icon.png" alt="GitHub">
                 </a>
